Se ajustan card del apartado de cursos para que tengan el height full

--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
           <!-- laravel realtime -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/laravel-realtime.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/laravel-realtime.jpg" alt="laravel-realtime">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     Tiempo real y Laravel: Múltiples apps realtime con Laravel
                   </h1>
@@ -456,9 +456,9 @@
           <!-- reactiveX -->
           <div class="w-full h-auto md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/reactiveX.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/reactiveX.jpg" alt="reactiveX">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     ReactiveX - RxJs: De cero hasta los detalles
                   </h1>
@@ -476,9 +476,9 @@
           <!-- angular avanzado -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/angular-avanzado.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/angular-avanzado.jpg" alt="angular-avanzado">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     Angular Avanzado: Lleva tus bases al siguiente nivel - MEAN
                   </h1>
@@ -496,9 +496,9 @@
           <!-- angular de cero a experto -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/angular-cero-experto.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/angular-cero-experto.jpg" alt="angular-cero-experto">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     Angular: De cero a experto - (Edición 2021)
                   </h1>
@@ -516,9 +516,9 @@
           <!-- laravel apiresful -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/api-resful-laravel.pdf" target="_blank">
-              <div class="flex flex-col dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
                 <img src="./assets/img/courses/api-resful-laravel.jpg" alt="api-resful-laravel">
-                <div class="h-[140px] flex flex-col justify-between gap-3 p-3">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
                   <h1 class="font-bold dark:text-gray-200">
                     API RESTful con Laravel: Guía Definitiva
                   </h1>
