--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="w-full fixed top-0 bg-white z-10 dark:bg-slate-900">
         <div class="container mx-auto py-5 flex items-center justify-between px-3 md:px-0">
           <div class="flex items-center gap-2">
-            <img class="w-8" src="assets/img/logo.png" alt="" />
+            <img id="logo" class="w-8" src="assets/img/logo/light/logo.png" alt="logo" />
             <span class="text-2xl font-bold text-teal-900 dark:text-white">
               Jorge Coronel
             </span>
@@ -704,7 +704,7 @@
     <div class="w-full bg-gray-800">
       <div class="container mx-auto py-5 flex items-center justify-between px-2 md:px-0">
         <div class="flex items-center gap-2">
-          <img class="w-8" src="assets/img/logo.png" alt="" />
+          <img class="w-8" src="assets/img/logo/dark/logo.png" alt="logo" />
           <span class="text-2xl font-bold text-white">Jorge Coronel</span>
         </div>
         <span class="hidden md:block font-medium text-white">
