Curso de pagos de laravel y portafolio del proyecto del curso - Se agrega nuevo curso de Procesamiento de pagos y suscripciones de Laravel - Se agrega nuevo proyecto del mismo curso que se hizo para el portafolio

--- a/index.html
+++ b/index.html
@@ -433,6 +433,26 @@
         </div>
 
         <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- laravel pagos -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/laravel-pagos.pdf" target="_blank">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <img src="./assets/img/courses/laravel-pagos.jpg" alt="laravel-pagos">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
+                  <h1 class="font-bold dark:text-gray-200">
+                    Procesa Pagos y Suscripciones con Laravel y Llamados a APIs
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    Udemy
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2024
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+
           <!-- laravel realtime -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/laravel-realtime.pdf" target="_blank">
@@ -551,6 +571,69 @@
 
         <!-- bottom -->
         <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- laravel pagos curso -->
+          <div class="w-full md:w5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/laravel-pagos.png" alt="laravel-pagos">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Pasarela de pagos y suscripciones
+                </h1>
+                <span class="text-sm text-gray-400">
+                  Este proyecto es el resultado del curso “Procesa Pagos y Suscripciones con Laravel y Llamados a APIs”. La solución está integrada con las plataformas de pago Paypal, Stripe y PayU, permitiendo a los usuarios realizar pagos únicos o suscribirse a servicios recurrentes.
+                </span>
+                <div class="flex flex-wrap gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Laravel</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Breeze</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Javascript</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">MySQL</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Stripe</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">PayPal</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">PayU</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://github.com/JorgeCoronelG/laravel-pagos-curso" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github</span>
+                  </a>
+                  <a href="./assets/video/courses/laravel-pagos.mp4" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Vídeo demostrativo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- club de lectura -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/club-lectura.png" alt="club-lectura">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Club de lectura
+                </h1>
+                <span class="text-sm text-gray-400">
+                  Sistema web desarrollado para gestionar de manera eficiente un club de lectura, permitiendo llevar el control de usuarios, donaciones, libros, préstamos y multas. Este proyecto resalta la integración de funciones administrativas esenciales para mantener un club de lectura bien organizado y funcional.
+                </span>
+                <div class="flex flex-wrap gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Laravel</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">MySQL</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular Material</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://github.com/JorgeCoronelG/club-lectura-app" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github frontend</span>
+                  </a>
+                  <a href="https://github.com/JorgeCoronelG/club-lectura-api" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github backend</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- home smart -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
             <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
@@ -579,7 +662,7 @@
             </div>
           </div>
 
-          <!-- example -->
+          <!-- Manage -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
             <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
               <img src="./assets/img/portfolio/manage.png" alt="manage">
@@ -601,36 +684,6 @@
                   </a>
                   <a href="https://github.com/JorgeCoronelG/portafolio-landing-manage" target="_blank">
                     <span class="bg-black p-2 text-xs text-white rounded-md">Github</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- example -->
-          <div class="w-full md:w-5/12 lg:w-[30%] transition-all">
-            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
-              <img src="./assets/img/portfolio/club-lectura.png" alt="club-lectura">
-              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
-                <h1 class="font-bold dark:text-gray-200">
-                  Club de lectura
-                </h1>
-                <span class="text-sm text-gray-400">
-                  Sistema web desarrollado para gestionar de manera eficiente un club de lectura, permitiendo llevar el control de usuarios, donaciones, libros, préstamos y multas. Este proyecto resalta la integración de funciones administrativas esenciales para mantener un club de lectura bien organizado y funcional.
-                </span>
-                <div class="flex flex-wrap gap-2">
-                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Laravel</span>
-                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular</span>
-                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">MySQL</span>
-                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
-                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular Material</span>
-                </div>
-                <div class="flex flex-row gap-2 my-2">
-                  <a href="https://github.com/JorgeCoronelG/club-lectura-app" target="_blank">
-                    <span class="bg-black p-2 text-xs text-white rounded-md">Github frontend</span>
-                  </a>
-                  <a href="https://github.com/JorgeCoronelG/club-lectura-api" target="_blank">
-                    <span class="bg-black p-2 text-xs text-white rounded-md">Github backend</span>
                   </a>
                 </div>
               </div>
