--- a/index.html
+++ b/index.html
@@ -571,6 +571,31 @@
 
         <!-- bottom -->
         <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- Carga masiva de un millón de registros -->
+          <div class="w-full md:w5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/laravel-million-records.png" alt="laravel-million-records">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Laravel API - Carga de un millón de registros.
+                </h1>
+                <span class="text-sm text-gray-400">
+                  Este proyecto consiste en la creación de una API desarrollada en Laravel, con el objetivo de gestionar y procesar archivos de gran tamaño de manera eficiente. En este caso específico, se implementó la funcionalidad para subir y procesar un archivo de 1 millón de registros, optimizando el uso de recursos del servidor y asegurando que el sistema no experimente problemas de memoria durante el proceso.
+                </span>
+                <div class="flex flex-wrap gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Laravel</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">MySQL</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Postman</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://github.com/JorgeCoronelG/laravel-million-records" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- laravel pagos curso -->
           <div class="w-full md:w5/12 lg:w-[30%] transition-all">
             <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
