Se agrega más descripción en el apartado de experiencia

--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
                     </p>
                     <div class="prose text-sm text-muted-foreground dark:text-gray-400">
                       <ul class="list-disc">
-                        <li>Desarrollar nuevos módulos y funcionalidades al sistema producto de la empresa en Laravel, Angular (con DevExpress) y Bootstrap 4.</li>
+                        <li>Desarrollar nuevos módulos y funcionalidades al sistema producto de la empresa en Laravel, Angular (con DevExpress), Bootstrap 4 y MySQL.</li>
+                        <li>Crear reportes PDF personalizados para clientes de la empresa en Laravel.</li>
+                        <li>Automatizar módulo de eventos integrando un tren de seguimiento y configuración para detener el tren dependiendo ciertos escenarios.</li>
+                        <li>Rediseñar módulos de acuerdo a un mockup con HTML, CSS, Bootstrap 4 y Angular.</li>
                         <li>Corregir bugs dentro del sistema producto de la empresa.</li>
                         <li>Optimizar y refactorizar el código del backend y frontend.</li>
                         <li>Seguimiento de actividades a través de la plataforma Monday.</li>
@@ -261,9 +264,12 @@
                     </p>
                     <div class="prose text-sm text-muted-foreground dark:text-gray-400">
                       <ul class="list-disc">
-                        <li>Líder de proyecto en sistema reservaciones desarrollado en Angular (con Angular Material), Tailwind CSS y Laravel.</li>
-                        <li>Integración de despliegues automáticos con Github Actions.</li>
-                        <li>Desarrollar funcionalidades nuevas del CRM de la empresa en Codeigniter.</li>
+                        <li>Líder de proyecto en sistema reservaciones desarrollado en Angular (con Angular Material), Tailwind CSS, Laravel y SQL Server</li>
+                        <li>Implementar notificaciones push en sistema de reservaciones con Laravel Echo, Laravel Pusher y Angular.</li>
+                        <li>Integrar eventos de Google Calendar en sistema de reservaciones con Laravel.</li>
+                        <li>Crear reportes en PDF y Excel para sistema de reservaciones.</li>
+                        <li>Integrar despliegues automáticos con Github Actions para el Frontend (Angular) y Backend (Laravel).</li>
+                        <li>Desarrollar nuevas funcionalidades del CRM de la empresa en Codeigniter, HTML, JQuery y Javascript.</li>
                         <li>Atender tickets de incidencias.</li>
                         <li>Mejorar áreas de oportunidad dentro del proceso del desarrollo y control de versiones.</li>
                       </ul>
@@ -289,10 +295,10 @@
                     </p>
                     <div class="prose text-sm text-muted-foreground dark:text-gray-400">
                       <ul class="list-disc">
-                        <li>Desarrollar funcionalidades y librerías para microservicios.</li>
-                        <li>Crear funcionalidades en Java para timbrado de CFDI y Complemento Carta Porte.</li>
-                        <li>Desarrollar módulos de sistemas web en Angular y Oracle JET.</li>
-                        <li>Dar mantenimiento al código de sistemas de backend y frontend.</li>
+                        <li>Desarrollar funcionalidades para el backend en el framework Helidon (Java).</li>
+                        <li>Desarrollar módulos de frontend en Angular y Oracle JET.</li>
+                        <li>Crear funcionalidades en Spring Boot (Java) para timbrado de CFDI y Complemento Carta Porte.</li>
+                        <li>Implementar endpoints para el backend con el framework Vert.x (Java).</li>
                         <li>Elaborar reportes con JasperReports.</li>
                       </ul>
                     </div>
@@ -319,8 +325,8 @@
                       <ul class="list-disc">
                         <li>Diseñar y construir páginas web en Wordpress y Joomla.</li>
                         <li>Desarrollar sistemas de cotización en diferentes páginas web de la empresa y clientes.</li>
-                        <li>Diseño de API para una aplicación móvil.</li>
-                        <li>Diseño de interfaces en Figma para una aplicación móvil.</li>
+                        <li>Implementar una API en PHP para una aplicación móvil.</li>
+                        <li>Diseñar interfaces en Figma para una aplicación móvil.</li>
                       </ul>
                     </div>
                   </div>
