--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p id="text" class="text-teal-600 dark:text-teal-700"></p>
       </div>
       <!-- texts -->
-      <div class="flex flex-col gap-5 rounded-md shadow-lg absolute top-0 bottom-0 mb-16 sm:mb-24 md:mb-10 lg:mt-48 m-auto right-5 lg:right-24 bg-white dark:bg-slate-900 dark:shadow-slate-800 p-6 h-fit w-1/3">
+      <div class="flex flex-col gap-2 md:gap-5 rounded-md shadow-lg absolute top-0 bottom-0 mb-16 sm:mb-24 md:mb-10 lg:mt-48 m-auto right-5 lg:right-24 bg-white dark:bg-slate-900 dark:shadow-slate-800 p-6 h-fit w-1/3">
         <h1 class="hidden md:flex text-2xl lg:text-4xl font-bold text-teal-900 dark:text-teal-700">Hola, soy Jorge</h1>
         <p class="block lg:hidden text-gray-400 text-sm md:text-base">
           Desarrollador fullstack con más de <strong>5 años de experiencia</strong>.
@@ -87,6 +87,13 @@
            target="_blank">
           <div class="flex flex-row gap-1">
             Curriculum <img src="assets/img/icons/download.svg" alt="download" class="w-4 lg:w-6">
+          </div>
+        </a>
+        <a class="flex md:hidden bg-teal-600 dark:bg-teal-700 text-white dark:text-gray-300 text-xs px-2 py-1 rounded-md font-semibold w-fit"
+           href="assets/docs/CV.pdf"
+           target="_blank">
+           <div class="flex flex-row gap-1">
+            CV <img src="assets/img/icons/download.svg" alt="download" class="w-4 tooltip">
           </div>
         </a>
       </div>
