--- a/index.html
+++ b/index.html
@@ -446,6 +446,26 @@
         </div>
 
         <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- docker -->
+          <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
+            <a href="./assets/docs/courses/docker.pdf" target="_blank">
+              <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+                <img src="./assets/img/courses/docker.jpg" alt="git-github">
+                <div class="h-full flex flex-col justify-between gap-3 p-3">
+                  <h1 class="font-bold dark:text-gray-200">
+                    Docker - Guía práctica de uso para desarrolladores
+                  </h1>
+                  <span class="font-semibold dark:text-gray-200">
+                    DevTalles
+                  </span>
+                  <span class="text-sm dark:text-gray-400">
+                    2025
+                  </span>
+                </div>
+              </div>
+            </a>
+          </div>
+
           <!-- git/github -->
           <div class="w-full md:w-5/12 lg:w-[30%] transition-all hover:scale-105">
             <a href="./assets/docs/courses/git-github.pdf" target="_blank">
