Se agrega pequeño proyecto de calculadora zoneless con testing del curso Angular Pro

--- a/index.html
+++ b/index.html
@@ -624,6 +624,31 @@
 
         <!-- bottom -->
         <div class="flex flex-wrap p-5 md:p-0 gap-7 justify-between mt-10">
+          <!-- Calculadora zoneless -->
+          <div class="w-full md:w5/12 lg:w-[30%] transition-all">
+            <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
+              <img src="./assets/img/portfolio/calculadora-zoneless.png" alt="calculadora-zoneless">
+              <div class="flex flex-col h-full justify-between gap-3 p-3 dark:shadow-slate-700">
+                <h1 class="font-bold dark:text-gray-200">
+                  Calculadora Zoneless con Testing
+                </h1>
+                <span class="text-sm text-gray-400">
+                  Proyecto del curso <a class="underline" href="https://cursos.devtalles.com/courses/angular-pro" target="_blank">Angular Pro</a> donde se realiza una calculadora funcional zoneless, usando input signals, computed signals, standalone components, content projection, etc. Además, el proyecto incluye testing de los templates, componentes y servicios que se utilizan.
+                </span>
+                <div class="flex flex-wrap gap-2">
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Angular</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Tailwind CSS</span>
+                  <span class="bg-teal-600 p-2 text-xs text-white rounded-md">Karma - Jasmine</span>
+                </div>
+                <div class="flex flex-row gap-2 my-2">
+                  <a href="https://github.com/JorgeCoronelG/calculadora-angular-pro" target="_blank">
+                    <span class="bg-black p-2 text-xs text-white rounded-md">Github</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- Carga masiva de un millón de registros -->
           <div class="w-full md:w5/12 lg:w-[30%] transition-all">
             <div class="flex flex-col h-full dark:bg-slate-800 rounded-b-lg shadow-lg dark:shadow-slate-700">
